added latest date of chart

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         margin-right: auto;
         border: 2px solid grey;
         ">
-        <div id='latestAsOfDate' style="text-align: end; margin-bottom: 30px; font-weight: 700;"></div>
+        <div style="text-align: end; margin-bottom: 30px;">As Of <span id='latestAsOfDate'></span></div>
         <div style="display: flex; justify-content: space-between">
             <span>Hover over the chart points for details</span><span id='quarters'></span>
         </div>
